--- a/wercker.yml
+++ b/wercker.yml
@@ -16,6 +16,10 @@ build:
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
 
+    - script: 
+        name: smoke test to see if it'll at least load
+        code: ./bin/smoke_test.rb
+
 deploy:
   steps:
     - heroku-deploy:
