--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-irc": "^0.2.6",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-mute": "*"
   },
   "engines": {
     "node": ">= 0.8.x",
