--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-irc": "^0.2.6",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-mute": ">= 0.0.4"
+    "hubot-mute": "alexhouse/hubot-mute"
   },
   "engines": {
     "node": ">= 0.8.x",
