--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
+    "cleverbot-node": "0.1.1",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-irc": "^0.2.6",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
