--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hubot-irc": "^0.2.6",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-mute": "alexhouse/hubot-mute",
+    "nodepie": "0.5.0",
     "underscore": "1.3.3",
     "handlebars": "1.0.5beta"
   },
