--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
+    "cheerio": "0.10.7",
     "cleverbot-node": "0.1.1",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-irc": "^0.2.6",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-mute": "alexhouse/hubot-mute",
     "nodepie": "0.5.0",
+    "request": "2.14.0",
     "underscore": "1.3.3",
     "handlebars": "1.0.5beta"
   },
