--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "nodepie": "0.5.0",
     "request": "2.14.0",
-    "underscore": "1.3.3"
+    "underscore": "1.3.3",
+    "echonest": "0.0.3"
   },
   "engines": {
     "node": ">= 0.8.x",
