--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodepie": "0.5.0",
     "request": "2.14.0",
     "underscore": "1.3.3",
-    "echonest": "0.0.3"
+    "echonest": "0.0.3",
+    "twit": "^1.1.18"
   },
   "engines": {
     "node": ">= 0.8.x",
