--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
   "dependencies": {
     "cheerio": "0.10.7",
     "cleverbot-node": "0.1.1",
+    "echonest": "0.0.3",
     "handlebars": "1.0.5beta",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-irc": "^0.2.7",
     "hubot-mute": "alexhouse/hubot-mute",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "moment": "^2.8.3",
     "nodepie": "0.5.0",
     "request": "2.14.0",
-    "underscore": "1.3.3",
-    "echonest": "0.0.3",
-    "twit": "^1.1.18"
+    "twit": "^1.1.18",
+    "underscore": "1.3.3"
   },
   "engines": {
     "node": ">= 0.8.x",
