--- a/package.json
+++ b/package.json
@@ -5,37 +5,48 @@
   "author": "GitHub Inc.",
   "keywords": [
     "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
+  "hubot",
+  "campfire",
+  "bot"
+    ],
   "description": "A simple helpful robot for your Company",
   "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/github/hubot/raw/master/LICENSE"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
-  "dependencies": {
-    "cheerio": "0.10.7",
-    "cleverbot-node": "0.1.1",
-    "echonest": "0.0.3",
-    "handlebars": "1.0.5beta",
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-irc": "^0.2.7",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "moment": "^2.8.3",
-    "nodepie": "0.5.0",
-    "request": "2.14.0",
-    "twit": "^1.1.18",
-    "underscore": "1.3.3"
-  },
-  "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
+  {
+    "type": "MIT",
+    "url": "https://github.com/github/hubot/raw/master/LICENSE"
   }
+  ],
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/github/hubot.git"
+    },
+    "dependencies": {
+      "cheerio": "0.10.7",
+      "cleverbot-node": "0.1.1",
+      "echonest": "0.0.3",
+      "handlebars": "1.0.5beta",
+      "hubot": ">= 2.6.0 < 3.0.0",
+      "hubot-irc": "^0.2.7",
+      "hubot-scripts": ">= 2.5.0 < 3.0.0",
+      "moment": "^2.8.3",
+      "nodepie": "0.5.0",
+      "request": "2.14.0",
+      "twit": "^1.1.18",
+      "underscore": "1.3.3"
+    },
+    "engines": {
+      "node": ">= 0.8.x",
+      "npm": ">= 1.1.x"
+    },
+    "devDependencies": {
+      "coffee-script": "~1.6.3",
+      "chai": "^1.10.0",
+      "hubot-mock-adapter": "~1.0.0",
+      "mocha": "~1.17.1",
+      "hubot": "~2.7.2",
+      "sinon": "~1.9.0"
+    },
+    "scripts": {
+      "test": "mocha ./spec --compilers coffee:coffee-script"
+    }
 }
