No more autoresponses... i hope

--- a/wercker.yml
+++ b/wercker.yml
@@ -19,12 +19,16 @@ build:
           echo "npm version $(npm -v) running"
 
     - script:
-        name: smoke test to see if it'll at least load
-        code: ./bin/smoke_test.rb
-
-    - script:
         name: now with real tests!
         code: npm test
+
+    - script:
+        name: Refuse to deploy autoresponders
+        code: ./bin/no_autoresponders.rb
+
+    - script:
+        name: smoke test to see if it'll at least load
+        code: ./bin/smoke_test.rb
 
 deploy:
   steps:
