--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
       "underscore": "1.3.3"
     },
     "engines": {
-      "node": ">= 0.8.x",
-      "npm": ">= 1.1.x"
+      "node": "0.10.x",
+      "npm": "1.4.x"
     },
     "devDependencies": {
       "coffee-script": "~1.6.3",
