--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "echonest": "0.0.3",
     "handlebars": "1.0.5beta",
     "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-brain-redis-hash": "^0.1.1",
     "hubot-irc": "^0.2.7",
     "hubot-markov": "^1.3.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
