--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "moment": "^2.8.3",
     "nodepie": "0.5.0",
+    "redis": "^0.12.1",
     "request": "2.14.0",
     "twit": "^1.1.18",
     "underscore": "1.3.3"
