--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hubot-brain-redis-hash": "^0.1.1",
     "hubot-irc": "^0.2.7",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-eyebleach": ">= 0.0.1",
     "moment": "^2.8.3",
     "nodepie": "0.5.0",
     "redis": "^0.12.1",
